Add download-from-remote feature for pre-built indexes (#2301)
* add PrebuiltIndexHandler
    * add a download progress bar
    * add MD5 checksum checking 
    * add gzip and unzip tarball functionalities
* add corresponding unittests