@@ -44,6 +44,8 @@ import io.anserini.search.similarity.TaggedSimilarity;
 import io.anserini.search.topicreader.BackgroundLinkingTopicReader;
 import io.anserini.search.topicreader.TopicReader;
 import io.anserini.search.topicreader.Topics;
+import io.anserini.util.PrebuiltIndexHandler;
+
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.time.DurationFormatUtils;
@@ -955,12 +957,27 @@ public final class SearchCollection implements Closeable {
 
   public SearchCollection(Args args) throws IOException {
     this.args = args;
-    Path indexPath = Paths.get(args.index);
+    Path indexPath = Path.of(args.index);
+    PrebuiltIndexHandler indexHandler = new PrebuiltIndexHandler(args.index);
+    if (!Files.exists(indexPath)) {
+      // it doesn't exist locally, we try to download it from remote
+      try {
+        indexHandler.initialize();
+        indexHandler.download();
+        indexPath = Path.of(indexHandler.decompressIndex());
+      } catch (IOException e) {
+        throw new RuntimeException("MD5 checksum does not match!");
+      } catch (Exception e) {
+        throw new IllegalArgumentException(String.format("Index path '%s' does not exist or is not a directory.", args.index));
+      }
+    } else {
+      // if it exists locally, we use it
+      indexPath = Paths.get(args.index);
+    }
 
     if (!Files.exists(indexPath) || !Files.isDirectory(indexPath) || !Files.isReadable(indexPath)) {
       throw new IllegalArgumentException(String.format("Index path '%s' does not exist or is not a directory.", args.index));
     }
-
     LOG.info("============ Initializing Searcher ============");
     LOG.info("Index: " + indexPath);
     this.reader = args.inmem ? DirectoryReader.open(MMapDirectory.open(indexPath)) :
